# triage

./: README.md  build-images.sh  data_extraction_gaps.md  deploy.sh  triage.code-workspace
client/: .gitignore  Dockerfile  eslint.config.js  jsconfig.json  (+6 more)
server/: .gitignore  Cargo.toml  Dockerfile
server/benches/: bench_projects.rs
server/docs/duckdb/: README.md  commands.md  connections_integrations.md  data_types_functions.md  overview.md
server/src/: advanced_analytics.rs  analytics.rs  auth.rs  constants.rs  content_extractor.rs  content_storage.rs  db.rs  db_utils.rs  enhanced_google_extractor.rs  enhanced_graph_schema.rs  enhanced_jira_extractor.rs  enhanced_slack_extractor.rs  google_auth.rs  google_client.rs  graph.rs  jira.rs  knowledge_engine.rs  lib.rs  link_detector.rs  main.rs  people_graph.rs  people_integration.rs  people_routes.rs  queries.rs  routes.rs  routes_test.rs  semantic_search.rs  server.rs  slack_auth.rs  slack_client.rs  smart_graph.rs  sync_status.rs  types.rs  unified_search.rs  user_notes.rs  utils.rs
server/src/db/create/: content_analytics.sql  content_extraction_jobs.sql  content_relationships.sql  content_table.sql  content_versions.sql  issues_table.sql  project_table.sql  search_index_table.sql  user_auth_tokens.sql
server/src/db/get/: extracted_content_by_ticket.sql  extracted_content_by_type_and_author.sql  extracted_content_full_text_search.sql  extracted_content_related_content.sql  project_ids.sql
server/src/db/insert/: content_extraction_jobs.sql  content_relationships.sql  content_search_index.sql  extracted_content.sql  issue_metadata.sql  project.sql  user_auth_tokens.sql
(+52 files in other folders)
