[package]
name = "triage"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
duckdb = { version = "1.2.2", features = ["bundled"] }
clap = { version = "4.5.37", features = ["derive"] }
colored = "3.0.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
inquire = "0.6"
base64 = "0.22"
once_cell = "1.18"
futures = "0.3.31"
chrono = "0.4.41"
num_cpus = "1.0"
rand = "0.8"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "bench_projects"
harness = false
