[package]
name = "triage"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
duckdb = { version = "1.2.2", features = ["bundled"] }
clap = { version = "4.5.37", features = ["derive"] }
colored = "3.0.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
inquire = "0.6"
base64 = "0.22"
once_cell = "1.18"
futures = "0.3.31"
chrono = "0.4.41"
num_cpus = "1.0"
rand = "0.8"
axum = { version = "0.7", features = ["json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
regex = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
url = "2.5"
urlencoding = "2.1"
oauth2 = "4.4"
postgres = "0.19.10"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "bench_projects"
harness = false
